# eevri-api

./: .flake8  .pre-commit-config.yaml  pyproject.toml
src/eevri/: aa.py  database.py  models.py
