[project]
name = "eevri"
version = "0.0.1"
description = "Eevri (I will read it) - self-hosted read it later app"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
]
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eevri = ["VERSION"]

[project.optional-dependencies]
dev = [
	"pre-commit",
    "flake8",
	"flake8-import-order",
    "flake8-bugbear",
    "flake8-simplify",
    "flake8-comprehensions",
    "flake8-builtins",
	"black",
	"mypy"
]

[project.urls]
repository = "https://github.com/dejvidq/eevri-api"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.mypy]
python_version = 3.8
exclude = [
    'virtual_env',
	'venv',
	'setup.py',
	'src/eevri/aa\.py'
]
